<resources>
    <string name="app_name">TestApplication</string>
    <string name="error_cant_load_cities">Cannot load list of cities</string>
    <string name="error_cant_get_current_weather">Cannot get current weather</string>
    <string name="error_cant_get_forecast_weather">Cannot get current weather</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="city">City</string>
    <string name="current">Current</string>
    <string name="forecast">Forecast</string>
    <string name="id">Id:</string>
    <string name="name">Name:</string>
    <string name="country">Country: </string>
    <string name="longitude">Longitude:</string>
    <string name="latitude">Latitude:</string>
    <string name="meter_in_sec">%1$.1f m/s</string>
    <string name="percent">%1$d %%</string>
    <string name="temperature">%1$.1f &#176;</string>
    <string name="temp">Temperature</string>
</resources>
